# digital-wounds

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
assets/rooms/: hallway.json  studio.json  test_room.json
assets/shaders/: background.frag  background.vert  bloom_blur.frag  bloom_bright.frag  depth.frag  fade.frag  mesh.frag  mesh.vert  particle.frag  particle.vert  postprocess.frag  shadow.frag  shadow.vert  ssao.frag  ssao_blur.frag  ui_font.frag  ui_rect.vert  ui_tex.frag
legacy/src/: main.js
legacy/src/book/: Book.js  BookFactory.js  PageCurlAnimator.js  PageGeometryBuilder.js  PageMaterial.js  PageTextureCompositor.js
legacy/src/core/: AssetPipeline.js  Engine.js  EventBus.js  InputManager.js
legacy/src/fx/: AudioSystem.js  FlickerLight.js  PSXEffect.js  ParticleSystem.js  PostProcessing.js
legacy/src/player/: InteractionRaycaster.js  PlayerController.js
legacy/src/props/: FallenLogs.js  FencePosts.js  GateArch.js  Gravestones.js  IronLanterns.js  PropBase.js  RuinedWalls.js  StoneMarkers.js  StonePillars.js  WoodenCrosses.js  index.js
legacy/src/ui/: LoadingScreen.js  UIOverlay.js
legacy/src/utils/: ProceduralTextures.js  math.js
legacy/src/world/: ArtistStation.js  ArtistStationLoader.js  ForestGenerator.js  GroundScatter.js  HotelHallway.js  ModelLoader.js  PathBuilder.js  SkyDome.js  TerrainBuilder.js  WorldManager.js
lib/glad/include/glad/: gl.h
public/models/hospital/bandage/: bandage.fbx
public/models/hospital/bed/: bed_frame_destroyed.fbx
public/models/hospital/blood_pack/: blood_pack.fbx
public/models/hospital/medical_cart/: medical_cart.fbx
public/models/hospital/medkit/: medkit.fbx
public/models/hospital/wheelchair/: wheelchair.fbx
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/core/: Engine.cpp  Engine.h  Engine.js  InputManager.cpp  InputManager.h
src/fx/: FallingLeaves.js  Fireflies.js  PSXEffect.js  ParticleSystem.cpp  ParticleSystem.h  PostProcess.cpp  PostProcess.h  PostProcessing.js
src/renderer/: BackgroundLayer.cpp  BackgroundLayer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
src/scene/: Room.cpp  Room.h  RoomTransition.cpp  RoomTransition.h  Scene.cpp  Scene.h
src/ui/: TitleScreen.cpp  TitleScreen.h  UIOverlay.cpp  UIOverlay.h
src/utils/: Log.h  ProceduralTextures.js
src/world/: Book.cpp  Book.h  ForestGenerator.js  GroundScatter.js  Inventory.cpp  Inventory.h  Item.cpp  Item.h  PathBuilder.js  PathProps.js  Player.cpp  Player.h  SkyDome.js  TerrainBuilder.js  WorldManager.js
tools/: gen_backgrounds.py
